<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_below="@+id/imgShow"
    android:elevation="@dimen/activity_horizontal_margin"
    android:layout_height="match_parent">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:orientation="horizontal">

    <TextView
        android:text="@string/tv_name"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_weight="0.15"
        android:layout_width="100dp"
        android:textStyle="normal|bold" />

    <TextView
        android:text=""
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_name"
        android:layout_weight="1" />
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:text="@string/tv_country"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:layout_width="100dp"
            android:textStyle="normal|bold" />

        <TextView
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_country"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:text="@string/tv_description"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:layout_width="100dp"
            android:textStyle="normal|bold" />

        <TextView
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_description"
            android:layout_weight="1"
            android:lines="5" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:text="@string/tv_next_air"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:layout_width="100dp"
            android:textStyle="normal|bold" />

        <TextView
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_next_air"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:text="@string/tv_total_season"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:layout_width="100dp"
            android:textStyle="normal|bold" />

        <TextView
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_total_sesion"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:text="@string/tv_started"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:layout_width="100dp"
            android:textStyle="normal|bold" />

        <TextView
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_started"
            android:layout_weight="1" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <TextView
            android:text="@string/tv_ended"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:layout_width="100dp"
            android:textStyle="normal|bold" />

        <TextView
            android:text=""
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_ended"
            android:layout_weight="1" />
    </LinearLayout>
</LinearLayout>